--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         
-         <img src="../img/Image-desafio.png" alt="Image-desafio" class="logo-image">
+         <img src="img/Image-desafio.png" alt="Image-desafio" class="logo-image">
        
         <section>
             <h1>Wide coverage location</h1>
